--- a/cabal.project
+++ b/cabal.project
@@ -2,5 +2,6 @@ packages : .
            ../quickcheck-state-machine
            ../persistent/persistent-sqlite
            ../persistent/persistent
+           ../persistent/persistent-postgresql
            ../persistent/persistent-template
 
